// Copyright 2024 drey7925
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package perovskite.protocol.entities;

import "coordinates.proto";

message EntityMove {
    // The starting position for the movement
    perovskite.protocol.coordinates.Vec3D start_position = 1;
    // The initial velocity of the movement
    perovskite.protocol.coordinates.Vec3F velocity = 2;
    // The acceleration of the movement
    perovskite.protocol.coordinates.Vec3F acceleration = 3;
    // The total time scheduled for the movement.
    float total_time_seconds = 4;
    // The face direction (about the vertical Y axis) in radians
    float face_direction = 5;

}

message EntityUpdate {
    // The unique ID of the entity.
    uint64 id = 1;
    // The current move that the entity is doing now
    EntityMove current_move = 2;
    // How long the entity has been moving in this current move (in seconds)
    float current_move_time = 3;
    // The next move that the entity will be doing
    EntityMove next_move = 4;
    // If true, the entity should stop being displayed. If so, ignore all other fields
    bool remove = 5;
    // Number of moves processed
    uint64 mod_count = 6;

    // todo later - appearance, including the ability to change the appearance on demand
}
